[tool.poetry]
name = "ao3-sync"
version = "0.1.0"
description = ""
authors = ["Thalida Noel <hello@thalida.com>", "Eddy Hintze <eddy@gitx.codes>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
parsel = "^1.9.1"
rich = "^13.7.1"
rich-click = "^1.8.3"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
ao3-sync = "ao3_sync.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
